# info_gpt

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.py
info_gpt/: agent.py  app.py  chat.py  constants.py  db.py  ingest.py  log_debugger.py  utils.py
info_gpt/api/: app.py  constants.py  tasks.py
info_gpt/scrapers/: confluence.py  github.py
info_gpt/webapp/: app.py  embeddings.py  model.py  vector_store.py
