[tool.poetry]
name = "info-gpt"
version = "0.1.0"
description = "Information Retrieval chatbot to fetch info from your internal sources."
authors = ["Tushar Mittal <chiragmittal.mittal@gmail.com>"]
readme = "README.md"
packages = [{include = "info_gpt"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.1,!=3.9.7"
requests = "^2.31.0"
langchain = "^0.0.189"
chromadb = "^0.3.25"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"
gpt4all = "^0.2.3"
sentence-transformers = "^2.2.2"
huggingface-hub = "^0.15.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
tzlocal = ">=1.1,<5"
aiosignal = "^1.3.1"
altair = "^5.0.1"
anyio = "^3.7.0"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
backoff = "^2.2.1"
blinker = "^1.6.2"
cachetools = "^5.3.1"
certifi = "^2023.5.7"
cffi = "^1.15.1"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
clickhouse-connect = "^0.6.2"
commonmark = "^0.9.1"
cryptography = "^41.0.1"
dataclasses-json = "^0.5.8"
decorator = "^5.1.1"
deprecated = "^1.2.14"
dnspython = "^2.3.0"
duckdb = "^0.8.1"
entrypoints = "^0.4"
et-xmlfile = "^1.1.0"
filelock = "^3.12.2"
frozenlist = "^1.3.3"
gitdb = "^4.0.10"
gitpython = "^3.1.31"
gptcache = "^0.1.31"
greenlet = "^2.0.2"
h11 = "^0.14.0"
hnswlib = "^0.7.0"
httpcore = "^0.17.2"
httptools = "^0.5.0"
httpx = "^0.24.1"
idna = "^3.4"
importlib-metadata = "^6.6.0"
jinja2 = "^3.1.2"
joblib = "^1.2.0"
jsonschema = "^4.17.3"
loguru = "^0.7.0"
lz4 = "^4.3.2"
markdown = "^3.4.3"
markdown-it-py = "^3.0.0"
markupsafe = "^2.1.3"
marshmallow = "^3.19.0"
marshmallow-enum = "^1.5.1"
mdurl = "^0.1.2"
monotonic = "^1.6"
mpmath = "^1.3.0"
msg-parser = "^1.2.0"
multidict = "^6.0.4"
mypy-extensions = "^1.0.0"
networkx = "^3.1"
nltk = "^3.8.1"
numpy = "^1.24.3"
olefile = "^0.46"
openai = "^0.27.8"
openapi-schema-pydantic = "^1.2.4"
openpyxl = "^3.1.2"
packaging = "^23.1"
pandas = "^2.0.2"
pdfminer-six = "^20221105"
pillow = "^9.5.0"
pinecone-client = "^2.2.2"
posthog = "^3.0.1"
protobuf = "^4.23.3"
pyarrow = "^12.0.1"
pycparser = "^2.21"
pydantic = "^1.10.9"
pydeck = "^0.8.0"
pygments = "^2.15.1"
pympler = "^1.0.1"
pypandoc = "^1.11"
pyrsistent = "^0.19.3"
python-dateutil = "^2.8.2"
python-docx = "^0.8.11"
python-dotenv = "^1.0.0"
python-magic = "^0.4.27"
python-pptx = "^0.6.21"
pytz = "^2023.3"
pytz-deprecation-shim = "^0.1.0.post0"
pyyaml = "^6.0"
regex = "^2023.6.3"
rfc3986 = "^2.0.0"
rich = "^13.4.2"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
sentencepiece = "^0.1.99"
six = "^1.16.0"
smmap = "^5.0.0"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.16"
streamlit = "^1.23.1"
sympy = "^1.12"
tenacity = "^8.2.2"
threadpoolctl = "^3.1.0"
tiktoken = "^0.4.0"
tokenizers = "^0.13.3"
toml = "^0.10.2"
toolz = "^0.12.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
tornado = "^6.3.2"
tqdm = "^4.65.0"
transformers = "^4.30.2"
typing-inspect = "^0.9.0"
typing-extensions = "^4.6.3"
tzdata = "^2023.3"
unstructured = "^0.7.5"
urllib3 = "^2.0.3"
uvicorn = "^0.22.0"
uvloop = "^0.17.0"
validators = "^0.20.0"
watchfiles = "^0.19.0"
websockets = "^11.0.3"
wrapt = "^1.15.0"
xlsxwriter = "^3.1.2"
yarl = "^1.9.2"
zipp = "^3.15.0"
zstandard = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
pre-commit = "^3.3.2"
detect-secrets = "^1.4.0"
ipykernel = "^6.23.1"

[tool.poetry.group.api.dependencies]
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-multipart = "^0.0.6"
celery = {extras = ["redis"], version = "^5.3.0"}
gunicorn = "^20.1.0"

[tool.ruff]
respect-gitignore = true
src = ["info_gpt", "tests"]
select = ["ALL"]
ignore = [
  "D",
  "ANN",
  "TRY002",
  "TRY003",
  "PLR2004",
  "G004",
]
unfixable = []
line-length = 120

[tool.poetry.scripts]
ask = "info_gpt.chat:ask"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
